[build-system]
# Should be mirrored in requirements/build.txt
requires = [
    "cmake>=3.26",
    "ninja",
    "packaging>=24.2",
    "setuptools>=77.0.3,<80.0.0",
    "setuptools-scm>=8.0",
    "wheel",
    "jinja2",
    "torch<=2.7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth"
description = "2-5X faster LLM finetuning"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dynamic = [ "version", "dependencies", "optional-dependencies"]
license = { file = "LICENSE" }
keywords = ["ai", "llm",]
authors = [
    {email = "info@unsloth.ai"},
    {name = "Unsloth AI team"},
]
maintainers = [
    {name = "Daniel Han", email = "danielhanchen@gmail.com"},
    {name = "Michael Han", email = "info@unsloth.ai"},
]
classifiers = [
    "Programming Language :: Python",
]

[tool.setuptools]
include-package-data = false


[tool.setuptools.packages.find]
where = ["."]
include = ["unsloth*"]
exclude = ["images*", "tests*", "kernels/moe*"]


[project.urls]
homepage = "http://www.unsloth.ai"
documentation = "https://github.com/unslothai/unsloth"
repository = "https://github.com/unslothai/unsloth"
