[build-system]
requires = ["setuptools==80.9.0", "setuptools-scm==9.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth"
dynamic = ["version"]
description = "2-5X faster training, reinforcement learning & finetuning"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "Apache-2.0"
keywords = ["ai", "llm", "reinforcement learning", "machine learning", "artificial intelligence", "pytorch"]
authors = [
    {email = "info@unsloth.ai"},
    {name = "Unsloth AI team"},
]
maintainers = [
    {name = "Daniel Han", email = "danielhanchen@gmail.com"},
    {name = "Michael Han", email = "info@unsloth.ai"},
]
classifiers = [
    "Programming Language :: Python",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "unsloth_zoo>=2025.12.8",
    "wheel>=0.42.0",
    "packaging",
    "torch>=2.4.0",
    "torchvision",
    "numpy",
    "tqdm",
    "psutil",
    "tyro",
    "protobuf",
    "xformers>=0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "triton>=3.0.0 ; ('linux' in sys_platform)",
    "triton-windows ; (sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
    "sentencepiece>=0.2.0",
    "datasets>=3.4.1,!=4.0.*,!=4.1.0,<4.4.0",
    "accelerate>=0.34.1",
    "peft>=0.7.1,!=0.11.0",
    "huggingface_hub>=0.34.0",
    "hf_transfer",
    "diffusers",
    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,!=4.57.0,<=4.57.3",
    "trl>=0.18.2,!=0.19.0,<=0.24.0",
]

[tool.setuptools.dynamic]
version = {attr = "unsloth.models._utils.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["images*", "tests*", "kernels/moe*"]

[project.optional-dependencies]
huggingface = [
    "unsloth_zoo>=2025.12.8",
    "wheel>=0.42.0",
    "packaging",
    "torchvision",
    "numpy",
    "tqdm",
    "psutil",
    "tyro",
    "protobuf",
    "sentencepiece>=0.2.0",
    "datasets>=3.4.1,!=4.0.*,!=4.1.0,<4.4.0",
    "accelerate>=0.34.1",
    "peft>=0.7.1,!=0.11.0",
    "huggingface_hub>=0.34.0",
    "hf_transfer",
    "diffusers",
    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,!=4.57.0,<=4.57.3",
    "trl>=0.18.2,!=0.19.0,<=0.24.0",
]
base = [
    "unsloth[huggingface]",
]
cu118only = [
    "xformers==0.0.22.post7 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121only = [
    "xformers==0.0.22.post7 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch211 = [
    "xformers==0.0.23 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch211 = [
    "xformers==0.0.23 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch212 = [
    "xformers==0.0.23.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch212 = [
    "xformers==0.0.23.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch220 = [
    "xformers==0.0.24 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch220 = [
    "xformers==0.0.24 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch230 = [
    "xformers==0.0.27 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch230 = [
    "xformers==0.0.27 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch240 = [
    "xformers==0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch240 = [
    "xformers==0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch250 = [
    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch250 = [
    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu124onlytorch250 = [
    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch251 = [
    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu121onlytorch251 = [
    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu124onlytorch251 = [
    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch260 = [
    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu124onlytorch260 = [
    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu126onlytorch260 = [
    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch270 = [
    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu126onlytorch270 = [
    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu128onlytorch270 = [
    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch271 = [
    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu126onlytorch271 = [
    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu128onlytorch271 = [
    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118onlytorch280 = [
    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu126onlytorch280 = [
    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu128onlytorch280 = [
    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu130onlytorch280 = [
]
cu126onlytorch290 = [
    "xformers==0.0.33.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu128onlytorch290 = [
    "xformers==0.0.33.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu130onlytorch290 = [
    "xformers==0.0.33.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu126onlytorch291 = [
    "xformers==0.0.33.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu128onlytorch291 = [
    "xformers==0.0.33.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu130onlytorch291 = [
    "xformers==0.0.33.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
cu118 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118only]",
]
cu121 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121only]",
]
cu118-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch211]",
]
cu121-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch211]",
]
cu118-torch212 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch212]",
]
cu121-torch212 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch212]",
]
cu118-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch220]",
]
cu121-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch220]",
]
cu118-torch230 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch230]",
]
cu121-torch230 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch230]",
]
cu118-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch240]",
]
cu121-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch240]",
]
cu124-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch240]",
]
cu118-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch250]",
]
cu121-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch250]",
]
cu124-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch250]",
]
cu118-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch251]",
]
cu121-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch251]",
]
cu124-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch251]",
]
cu118-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu118onlytorch260]",
]
cu124-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu124onlytorch260]",
]
cu126-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu126onlytorch260]",
]
cu118-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch270]",
]
cu126-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch270]",
]
cu128-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch270]",
]
cu118-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch271]",
]
cu126-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch271]",
]
cu128-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch271]",
]
cu118-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch280]",
]
cu126-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch280]",
]
cu128-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch280]",
]
cu130-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch280]",
]
cu126-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch290]",
]
cu128-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch290]",
]
cu130-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch290]",
]
cu126-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch291]",
]
cu128-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch291]",
]
cu130-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch291]",
]
kaggle = [
    "unsloth[huggingface]",
]
kaggle-new = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
]
conda = [
    "unsloth[huggingface]",
]
colab-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch211]",
]
flashattention = [
    "packaging ; ('linux' in sys_platform)",
    "ninja ; ('linux' in sys_platform)",
    "flash-attn>=2.6.3 ; ('linux' in sys_platform)",
]
colab-ampere-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch211]",
    "unsloth[flashattention]",
]
colab-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch220]",
]
colab-ampere-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch220]",
    "unsloth[flashattention]",
]
colab-new = [
    "unsloth_zoo>=2025.12.8",
    "packaging",
    "tyro",
    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,!=4.57.0,<=4.57.3",
    "datasets>=3.4.1,!=4.0.*,!=4.1.0,<4.4.0",
    "sentencepiece>=0.2.0",
    "tqdm",
    "psutil",
    "wheel>=0.42.0",
    "numpy",
    "protobuf",
    "huggingface_hub>=0.34.0",
    "hf_transfer",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[triton]",
]
colab-no-deps = [
    "accelerate>=0.34.1",
    "trl>=0.18.2,!=0.19.0,<=0.24.0",
    "peft>=0.7.1",
    "xformers<0.0.27",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "protobuf",
]
colab = [
    "unsloth[cu121]",
]
colab-ampere = [
    "unsloth[colab-ampere-torch220]",
    "unsloth[flashattention]",
]
cu118-ampere = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118only]",
    "unsloth[flashattention]",
]
cu121-ampere = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121only]",
    "unsloth[flashattention]",
]
cu118-ampere-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch211]",
    "unsloth[flashattention]",
]
cu121-ampere-torch211 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch211]",
    "unsloth[flashattention]",
]
cu118-ampere-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch220]",
    "unsloth[flashattention]",
]
cu121-ampere-torch220 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch220]",
    "unsloth[flashattention]",
]
cu118-ampere-torch230 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch230]",
    "unsloth[flashattention]",
]
cu121-ampere-torch230 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch230]",
    "unsloth[flashattention]",
]
cu118-ampere-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch240]",
    "unsloth[flashattention]",
]
cu121-ampere-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch240]",
    "unsloth[flashattention]",
]
cu124-ampere-torch240 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch240]",
    "unsloth[flashattention]",
]
cu118-ampere-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch250]",
    "unsloth[flashattention]",
]
cu121-ampere-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch250]",
    "unsloth[flashattention]",
]
cu124-ampere-torch250 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch250]",
    "unsloth[flashattention]",
]
cu118-ampere-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch251]",
    "unsloth[flashattention]",
]
cu121-ampere-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu121onlytorch251]",
    "unsloth[flashattention]",
]
cu124-ampere-torch251 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu124onlytorch251]",
    "unsloth[flashattention]",
]
cu118-ampere-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu118onlytorch260]",
    "unsloth[flashattention]",
]
cu124-ampere-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu124onlytorch260]",
    "unsloth[flashattention]",
]
cu126-ampere-torch260 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.1",
    "unsloth[cu126onlytorch260]",
    "unsloth[flashattention]",
]
cu118-ampere-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch270]",
    "unsloth[flashattention]",
]
cu126-ampere-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch270]",
    "unsloth[flashattention]",
]
cu128-ampere-torch270 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch270]",
    "unsloth[flashattention]",
]
cu118-ampere-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch271]",
    "unsloth[flashattention]",
]
cu126-ampere-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch271]",
    "unsloth[flashattention]",
]
cu128-ampere-torch271 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch271]",
    "unsloth[flashattention]",
]
cu118-ampere-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu118onlytorch280]",
    "unsloth[flashattention]",
]
cu126-ampere-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch280]",
    "unsloth[flashattention]",
]
cu128-ampere-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch280]",
    "unsloth[flashattention]",
]
cu130-ampere-torch280 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch280]",
]
cu126-ampere-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch290]",
]
cu128-ampere-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch290]",
]
cu130-ampere-torch290 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch290]",
]
cu126-ampere-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu126onlytorch291]",
]
cu128-ampere-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu128onlytorch291]",
]
cu130-ampere-torch291 = [
    "unsloth[huggingface]",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "unsloth[cu130onlytorch291]",
]

[project.urls]
homepage = "http://www.unsloth.ai"
documentation = "https://github.com/unslothai/unsloth"
repository = "https://github.com/unslothai/unsloth"
